--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@vicons/tabler": "^0.13.0",
     "pinia": "^3.0.3",
+    "posthog-js": "^1.256.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
