--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "pnpm build && gh-pages -d dist"
   },
   "dependencies": {
     "@vicons/tabler": "^0.13.0",
@@ -37,6 +38,7 @@
     "eslint": "^9.29.0",
     "eslint-plugin-cypress": "^5.1.0",
     "eslint-plugin-vue": "~10.2.0",
+    "gh-pages": "^6.3.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
     "naive-ui": "^2.42.0",
