--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pinia": "^3.0.3",
     "posthog-js": "^1.256.0",
     "vue": "^3.5.17",
+    "vue-i18n": "^9.14.4",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
